# Copyright 2023 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

PROJECT(pdo-common-crypto DESCRIPTION "PDO crypto SWIG python bindings")

PKG_CHECK_MODULES(OPENSSL REQUIRED openssl>=1.1.0g)

SET(CRYPTO_SWIG_SOURCE ${PDO_SOURCE_ROOT}/python/swig/crypto/crypto.i)

SET(CRYPTO_SWIG_TARGET crypto)

SET_PROPERTY(SOURCE ${CRYPTO_SWIG_SOURCE} PROPERTY CPLUSPLUS ON)
SET_PROPERTY(SOURCE ${CRYPTO_SWIG_SOURCE} PROPERTY COMPILE_OPTIONS "-threads")
SWIG_ADD_LIBRARY(${CRYPTO_SWIG_TARGET} TYPE SHARED LANGUAGE python SOURCES ${CRYPTO_SWIG_SOURCE} OUTPUT_DIR ${PDO_COMMON_PY_DIR})

ADD_COMPILE_OPTIONS(${OPENSSL_CFLAGS})

LIST(APPEND CRYPTO_SWIG_INCLUDE_DIRS ${COMMON_SWIG_INCLUDE_DIRS})
LIST(APPEND CRYPTO_SWIG_INCLUDE_DIRS ${COMMON_SOURCE_DIR}/packages/base64)
LIST(APPEND CRYPTO_SWIG_INCLUDE_DIRS ${OPENSSL_INCLUDE_DIRS})

# this ensures the generated .so file is placed along with the .py files
SET_PROPERTY(TARGET ${CRYPTO_SWIG_TARGET} PROPERTY LIBRARY_OUTPUT_DIRECTORY ${PDO_COMMON_PY_DIR})
SET_PROPERTY(TARGET ${CRYPTO_SWIG_TARGET} PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE)
TARGET_INCLUDE_DIRECTORIES(${CRYPTO_SWIG_TARGET} PRIVATE ${CRYPTO_SWIG_INCLUDE_DIRS})

LIST(APPEND CRYPTO_SWIG_LIBS ${COMMON_SWIG_LIBS})
LIST(APPEND CRYPTO_SWIG_LIBS ${OPENSSL_LINK_LIBRARIES})

LIST(APPEND CRYPTO_SWIG_LIBRARY_DIRS ${COMMON_LIBRARY_DIR})
LIST(APPEND CRYPTO_SWIG_LIBRARY_DIRS ${OPENSSL_LIBRARY_DIRS})

TARGET_LINK_DIRECTORIES(${CRYPTO_SWIG_TARGET} PRIVATE ${CRYPTO_SWIG_LIBRARY_DIRS})
TARGET_LINK_LIBRARIES(${CRYPTO_SWIG_TARGET} ${CRYPTO_SWIG_LIBS})